cmake_minimum_required(VERSION 4.2)
project(DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA
        Sorting/QuickSort.cpp
        Sorting/MergeSort.cpp
        Neetcode/ArrayandHashing/ConcatenationofArray.cpp
        Neetcode/ArrayandHashing/ContainsDuplicate.cpp
        Neetcode/ArrayandHashing/ValidAnagram.cpp
        Recursion/Print1toN.cpp
        Recursion/PrintNto1.cpp
        Recursion/PrintallEven.cpp
        Recursion/PrintAllOdd.cpp
        Recursion/FactorialofN.cpp
        Recursion/SumofN.cpp
        Recursion/Powerof2.cpp
        Recursion/SumofSquare.cpp
        Recursion/FibonacciSeries.cpp
        Recursion/NthStair.cpp
        Recursion/GCDofTwoNumber.cpp
        Biweekly182/ScoreValidator.cpp
        Recursion/PrintTheArray.cpp
        Recursion/SumofElement.cpp
        Recursion/MinimumElement.cpp
        Recursion/CheckPalindrone.cpp
        Recursion/CountVowels.cpp
        Recursion/ReverseTheString.cpp
        Recursion/LowerCaseAndUpperCase.cpp
        Recursion/Subsequence.cpp
        Recursion/GenerateParentheses.cpp
        Recursion/SubsetSum.cpp
        Recursion/TargetSum.cpp
        Recursion/PerfectSum.cpp
        Recursion/TargetSumwithRepeation.cpp
        Neetcode/ArrayandHashing/ReplaceElementswithGreatestonRightSide.cpp
        Neetcode/ArrayandHashing/isSubssequence.cpp
        Neetcode/ArrayandHashing/AppendCharacterstoStringtoMakeSubsequence.cpp
        Neetcode/ArrayandHashing/ScoreofString.cpp
        Neetcode/ArrayandHashing/LengthofLastWord.cpp
        Arrays/SeprateOneandZero.cpp
        Arrays/TwoSum.cpp
        Arrays/TwoSumSorted.cpp
        Arrays/PairwithGivenDifference.cpp
        Codeforeces/Basics/SayHello.cpp
        Codeforeces/Basics/BasicDataTypes.cpp
        Codeforeces/Basics/Calculator.cpp
        Codeforeces/Basics/Difference.cpp
        Codeforeces/Basics/AreaofCircle.cpp
        Codeforeces/Basics/DigitSummition.cpp
        Codeforeces/Basics/1toN.cpp
        Codeforeces/Basics/TwoNumbers.cpp
        Codeforeces/Basics/WelcomeforyouwithCondition.cpp
        Codeforeces/Basics/Multiples.cpp
        Codeforeces/Basics/MaxandMIn.cpp
        Codeforeces/Basics/Brothers.cpp
        Codeforeces/Basics/CapitalorSmallorDigit.cpp
        Codeforeces/Basics/Char.cpp
        Codeforeces/Basics/Calculator2.cpp
        Codeforeces/Basics/FirstDigit.cpp
        Codeforeces/Basics/CoordinatesofaPoint.cpp
        Codeforeces/Basics/AgeinDays.cpp
        Codeforeces/Basics/Intervals.cpp
        Codeforeces/Basics/SorttheNumber.cpp
        Codeforeces/Basics/FloatorInt.cpp
        Codeforeces/Basics/Comparison.cpp
        Codeforeces/Basics/MathmaticalExpression.cpp
        Codeforeces/Basics/TwoIntervals.cpp
)
