cmake_minimum_required(VERSION 4.2)
project(DSA)

set(CMAKE_CXX_STANDARD 20)

add_executable(DSA
        Sorting/QuickSort.cpp
        Sorting/MergeSort.cpp
        Neetcode/ArrayandHashing/ConcatenationofArray.cpp
        Neetcode/ArrayandHashing/ContainsDuplicate.cpp
        Neetcode/ArrayandHashing/ValidAnagram.cpp
        Recursion/Print1toN.cpp
        Recursion/PrintNto1.cpp
        Recursion/PrintallEven.cpp
        Recursion/PrintAllOdd.cpp
        Recursion/FactorialofN.cpp
        Recursion/SumofN.cpp
        Recursion/Powerof2.cpp
        Recursion/SumofSquare.cpp
        Recursion/FibonacciSeries.cpp
        Recursion/NthStair.cpp
        Recursion/GCDofTwoNumber.cpp
        Biweekly182/ScoreValidator.cpp
        Recursion/PrintTheArray.cpp
        Recursion/SumofElement.cpp
        Recursion/MinimumElement.cpp
        Recursion/CheckPalindrone.cpp
        Recursion/CountVowels.cpp
        Recursion/ReverseTheString.cpp
        Recursion/LowerCaseAndUpperCase.cpp
        Recursion/Subsequence.cpp
        Recursion/GenerateParentheses.cpp
        Recursion/SubsetSum.cpp
        Recursion/TargetSum.cpp
        Recursion/PerfectSum.cpp
        Recursion/TargetSumwithRepeation.cpp
        Neetcode/ArrayandHashing/ReplaceElementswithGreatestonRightSide.cpp
        Neetcode/ArrayandHashing/isSubssequence.cpp
        Neetcode/ArrayandHashing/AppendCharacterstoStringtoMakeSubsequence.cpp
        Neetcode/ArrayandHashing/ScoreofString.cpp
        Neetcode/ArrayandHashing/LengthofLastWord.cpp
        Arrays/SeprateOneandZero.cpp
        Arrays/TwoSum.cpp
        Arrays/TwoSumSorted.cpp
        Arrays/PairwithGivenDifference.cpp
        Codeforeces/Sheet1/SayHello.cpp
        Codeforeces/Sheet1/BasicDataTypes.cpp
        Codeforeces/Sheet1/Calculator.cpp
        Codeforeces/Sheet1/Difference.cpp
        Codeforeces/Sheet1/AreaofCircle.cpp
        Codeforeces/Sheet1/DigitSummition.cpp
        Codeforeces/Sheet1/1toN.cpp
        Codeforeces/Sheet1/TwoNumbers.cpp
        Codeforeces/Sheet1/WelcomeforyouwithCondition.cpp
        Codeforeces/Sheet1/Multiples.cpp
        Codeforeces/Sheet1/MaxandMIn.cpp
        Codeforeces/Sheet1/Brothers.cpp
        Codeforeces/Sheet1/CapitalorSmallorDigit.cpp
        Codeforeces/Sheet1/Char.cpp
        Codeforeces/Sheet1/Calculator2.cpp
        Codeforeces/Sheet1/FirstDigit.cpp
        Codeforeces/Sheet1/CoordinatesofaPoint.cpp
        Codeforeces/Sheet1/AgeinDays.cpp
        Codeforeces/Sheet1/Intervals.cpp
        Codeforeces/Sheet1/SorttheNumber.cpp
        Codeforeces/Sheet1/FloatorInt.cpp
        Codeforeces/Sheet1/Comparison.cpp
        Codeforeces/Sheet1/MathmaticalExpression.cpp
        Codeforeces/Sheet1/TwoIntervals.cpp
        Codeforeces/Sheet1/TheLast2Digits.cpp
        Codeforeces/Sheet1/HardCompare.cpp
        Arrays/SubarraywitEqualSum.cpp
        Arrays/MaximumSubarray.cpp
        Arrays/MaxDiffferenceBwTwoElement.cpp
        Codeforeces/Sheet2/OnetoN.cpp
        Codeforeces/Sheet2/EvenNumbers.cpp
        Codeforeces/Sheet2/EvenOddPosNeg.cpp
        Codeforeces/Sheet2/FixedPassword.cpp
        Codeforeces/Sheet2/Max.cpp
        Codeforeces/Sheet2/Table.cpp
        Codeforeces/Sheet2/Factorial.cpp
        Codeforeces/Sheet2/OnePrime.cpp
        Codeforeces/Sheet2/PlaindroneorNot.cpp
        Codeforeces/Sheet2/PrimeINRange.cpp
        Codeforeces/Sheet2/Divisors.cpp
        Codeforeces/Sheet2/GCD.cpp
        Codeforeces/Sheet2/LuckyNumber.cpp
        Codeforeces/Sheet2/NumbersHistogram.cpp
        Codeforeces/Sheet2/Pyramid.cpp
        Codeforeces/Sheet2/Shape.cpp
        Codeforeces/Sheet2/Digits.cpp
        Codeforeces/Sheet2/Sequence.cpp
        Codeforeces/Sheet2/ThreeNumbers.cpp
        Codeforeces/Sheet2/Fibonacci.cpp
        Codeforeces/Sheet2/ConverttoDecimal.cpp
        Codeforeces/Sheet2/Shape2.cpp
        Codeforeces/Sheet2/SumofOdd.cpp
        Codeforeces/Sheet2/PSUM.cpp
        Codeforeces/Sheet2/ShapeTwo.cpp
        Codeforeces/Sheet2/ShapeThree.cpp
        Arrays/RainwaterTrapping.cpp
        Arrays/MissingandRepeating.cpp
        Arrays/PrintSumofDiagonal.cpp
        Arrays/BinarySearchinMatrix.cpp
        Strings/ReverseString.cpp
        Strings/DefanginganIP.cpp
        Strings/RotateString.cpp
        Strings/Panagram.cpp
        Strings/LongestPalindrone.cpp
        Strings/SortingtheSentence.cpp
        Strings/SortVowels.cpp
        Strings/AddStrings.cpp
        Strings/RomantoInteger.cpp
        Strings/FactorialofNumber.cpp
        Strings/LongestSubstringWitoutRepeatingCharacter.cpp
        Strings/SmallestDistinctWindow.cpp
        Codeforeces/Practice/EvenHateOdd.cpp
        Codeforeces/Practice/BeautifulYear.cpp
        Codeforeces/Practice/When.cpp
        Strings/LongestPrefixSuffix.cpp
        Strings/FindFirstIndex.cpp
        Arrays/LongestHappyPrefix.cpp
        Strings/ShortestPalindrone.cpp
        Strings/RepeatedStringMatch.cpp
        BinarySearch/FirstandLastOccurance.cpp
        BinarySearch/SearchInsertPosition.cpp
        BinarySearch/Sqrt.cpp
        BinarySearch/KthMissingPositive.cpp
        Codeforeces/Bitmasking/CBL/UniqueNumber.cpp
        Codeforeces/Bitmasking/CBL/EvenorOdd.cpp
        Codeforeces/Bitmasking/CBL/getithbits.cpp
        LinkedList/Insertion.cpp
)
